# OpenScofo

./: .clang-format  .gitignore  404.html  CITATION.cff  CMakeLists.txt  README.md  Untitled-1.pd  coi-serviceworker.js  generatedocs.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  zensical.toml
.github/workflows/: c-cpp.yml
Documentation/: copy-editor.py  index.md  python.md
Documentation/Editor/: editor.js  index.html
Documentation/score/: actions.md  config.md  events.md  intro.md  lua.md
Editor/: index.html  styles.css
Editor/highlight/: lua.scm
Editor/pd4web/: index.pd  pd4web.data  pd4web.js  pd4web.wasm
Editor/src/core/: OpenScofoOnlineEditor.js
Editor/src/utils/: autocomplete.js
Editor/tree-sitter/: tree-sitter-openscofo.wasm
Resources/: ante.pd  antescofo~-help.pd  o.scofo~-help.pd  test.py
Resources/Extended-Techniques/: Canticos-II.mscz  descriptors.pd  flute.onnx  main.pd  py.train-onnx.pd_py  py.train.pd_py
Resources/Extended-Techniques-Random-Tests/: bhack-oscofo.pd  score.txt
Resources/OScofo Language/: tree-sitter-openscofo.wasm  tree-sitter.json
Resources/Online-Editor/: editor.js  index.html
Resources/Research/: CMakeLists.txt  Pitch-onnx.pd  extract-templates.py  mfcc.py  onnx-trainer.py
Resources/Research/Onsets/: xlab.pd
Resources/Research/TimeCoherence/: bwv-1013.csv  graphs.py  plot.py
Resources/Tests/: bhack-oscofo.pd  bwv-1007.txt  bwv-1013.txt  canticos-ante.txt  canticos.txt  extract-mir.py  o.scofo~.maxhelp  random.pd  test.py  test.txt
Score-Editor/: app.js  editor.js  index-old.html  index.html  index.pd  pd4web.js  pd4web.wasm  styles.css  tree-sitter-scofo.wasm
Score-Editor/src/config/: constants.js
Score-Editor/src/core/: OpenScofoOnlineEditor.js
Score-Editor/src/parser/: highlighting.js  parser-integration.js
Score-Editor/src/services/: score-service.js
Score-Editor/src/utils/: debounce.js
Score-Editor/tree-sitter/: tree-sitter-lua.wasm  tree-sitter-openscofo.wasm
Sources/: OScofo.hpp  OpenScofo.hpp
Sources/Language/: grammar.js
Sources/Language/queries/: injections.scm
Sources/Max/: CMakeLists.txt  maxlua.cpp  o.scofo~.cpp
Sources/OScofo/: OScofo.cpp  lua.cpp  mdp.cpp  mdp.hpp  mir.cpp  mir.hpp  score.cpp  score.hpp  states.hpp
Sources/OpenScofo/: OpenScofo.cpp  grammar.js  log.hpp  lua.cpp  mdp.cpp  mdp.hpp  mir.cpp  mir.hpp  score.cpp  score.hpp  states.hpp
Sources/PureData/: CMakeLists.txt  o.scofo~-help.pd  o.scofo~.cpp  pdlua.cpp
Sources/Python/: CMakeLists.txt  PyOScofo.cpp  PyOpenScofo.cpp
Sources/Python/OpenScofo/: __init__.py
Tests/: CMakeLists.txt  ExtendedTechSteepnessCurve.py  Pitch-onnx.pd  Untitled-1.pd  ante.pd  control.py  control_events.json  events.lab  exception.hpp  extract-templates.py  folder-classifier.py  gamma_test  gamma_test.cpp  librosa-validation.py  mfcc.py  offline.pd  onnx-trainer.py  output.csv  percussion.py  perf.cpp  performance.cpp  pitch-template.py  plot-descriptors.py  score.cpp  sonic-visualizer.py  test-ante.pd  test-control.py  test.pd  test1.cpp  test_math.cpp  test_openscofo.cpp  test_score.cpp  time-template.py  time-test.musicxml  time-test.mxl  time-test.txt  train.py
Tests/assets/: all-tokens.txt  bwv-1013.txt  canticos-ante.txt  canticos.txt  lua.txt  wrongfftsize.txt  wronghopsize.txt  wrongtrill.txt
extra/: extra.css
python/: index.html
score/actions/: index.html
score/config/: index.html
score/events/: index.html
score/intro/: index.html
score/lua/: index.html
search/: search_index.json
