[project]
name = "OpenScofo"
version = "0.1.4"
authors = [{name = "Charles K. Neimog", email = "charlesneimog@outlook.com"}]
description = "OpenScofo is an OpenSource Score Follower based on the Research of Cont (2010)."
readme = "README.md"
requires-python = ">=3.10, <3.14"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build"
wheel.packages = ["OpenScofo"]
cmake.args = [
    "-DBUILD_PY_MODULE=ON",
    "-DBUILD_MAX_OBJECT=OFF",
    "-DBUILD_WITH_LUA=ON",
    "-DCMAKE_OSX_DEPLOYMENT_TARGET=11.0",
    "-DPD_LIB_DIR=./build/o.scofo~",
]
