[project]
name = "OpenScofo"
dynamic = ["version"]
authors = [{name = "Charles K. Neimog", email = "charlesneimog@outlook.com"}]
description = "OpenScofo is an OpenSource Score Follower based on the Research of Cont (2010)."
readme = "README.md"
requires-python = ">=3.10, <3.15"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build"
wheel.packages = ["OpenScofo"]
cmake.args = [
    "-DBUILD_PY_MODULE=ON",
    "-DBUILD_MAX_OBJECT=OFF",
    "-DBUILD_PD_OBJECT=OFF",
    "-DBUILD_WITH_LUA=ON",
    "-DPD_LIB_DIR=./OpenScofo",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = 'project\(OpenScofo VERSION ([0-9]+\.[0-9]+\.[0-9]+)\)'
result = "{0}"
