[project]
name = "OpenScofo"
dynamic = ["version"]
authors = [{name = "Charles K. Neimog", email = "charlesneimog@outlook.com"}]
description = "OpenScofo is an OpenSource Score Follower based on the Research of Cont (2010)."
readme = "README.md"
requires-python = ">=3.10, <3.15"

[build-system]
requires = [
  "scikit-build-core",
  "pybind11-stubgen"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build"
wheel.packages = ["OpenScofo"]
cmake.args = [
    "-DOSCOFO_BUILD_PY_MODULE=ON",
    "-DOSCOFO_BUILD_MAX_OBJECT=ON",
    "-DOSCOFO_BUILD_PD_OBJECT=ON",
    "-DOSCOFO_BUILD_WITH_LUA=ON",
    # "-DCMAKE_BUILD_TYPE=Debug",
    "-DPD_LIB_DIR=./OpenScofo",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = 'project\(OpenScofo VERSION ([0-9]+\.[0-9]+\.[0-9]+)\)'
result = "{0}"
